--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,10 @@ sky:
     database: sky_take_out
     username: root
     password: 123456
+  alioss:
+    endpoint: oss-cn-hangzhou.aliyuncs.com
+    access-key-id: LTAI5tLLZsNdDKe6QTFxg1V2
+    access-key-secret: C9tSHxoQMxNqd4Sw0G4XsNrT1AGvG5
+    bucket-name: haenu-sky-take-out
+
+
