--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -11,5 +11,9 @@ sky:
     access-key-id: LTAI5tLLZsNdDKe6QTFxg1V2
     access-key-secret: C9tSHxoQMxNqd4Sw0G4XsNrT1AGvG5
     bucket-name: haenu-sky-take-out
-
+  redis:
+    host: localhost
+    port: 6379
+    password: 123456
+    database: 10
 
