--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,14 @@
                 <version>4.5.13</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-cache</artifactId>
+                <version>2.7.3</version>
+            </dependency>
+
+
+
 
             <dependency>
                 <groupId>javax.xml.bind</groupId>
