--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -8,21 +8,19 @@ sky:
     password: 123456
   alioss:
     endpoint: oss-cn-hangzhou.aliyuncs.com
-    access-key-id: LTAI5tLLZsNdDKe6QTFxg1V2
-    access-key-secret: C9tSHxoQMxNqd4Sw0G4XsNrT1AGvG5
-    bucket-name: haenu-sky-take-out
+    access-key-id: xxxxxxxxxxxxxxx
+    access-key-secret: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+    bucket-name: xxxxxxxxxxxxxxx
   redis:
     host: localhost
     port: 6379
     password: 123456
     database: 10
   wechat:
-    appid: wx9668da547570f5e3
-    secret: 02957e0731e083a04e0b95375b0cff2b
-#    appid: wxffb3637a228223b8
-#    secret: 84311df9199ecacdf4f12d27b6b9522d
-    mchid: 1561414331
-    mchSerialNo: 4B3B3DC35414AD50B1B755BAF8DE9CC7CF407606
+    appid: xxxxxxxxxxxxxxxxxxxxxxxx
+    secret: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+    mchid: xxxxxxxxxxxxxxx
+    mchSerialNo: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
     privateKeyFilePath: D:\weixin\apiclient_key.pem
     apiV3Key: CZBK51236435wxpay435434323FFDuv3
     weChatPayCertFilePath: D:\weixin\wechatpay_166D96F876F45C7D07CE98952A96EC980368ACFC.pem
