--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
     </parent>
     <groupId>com.sky</groupId>
     <artifactId>sky-take-out</artifactId>
-    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <modules>
         <module>sky-common</module>
         <module>sky-pojo</module>
@@ -102,6 +102,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>2.7.8</version>
             </dependency>
 
             <dependency>
@@ -153,7 +154,6 @@
                 <artifactId>poi-ooxml</artifactId>
                 <version>3.16</version>
             </dependency>
-
 
         </dependencies>
     </dependencyManagement>
